[package]
name = "stm32h7"
version = "0.1.0"
edition = "2021"

[dependencies]

embassy-stm32 = { version = "0.1", features = ["defmt", "stm32h755zi-cm4", "exti", "memory-x"] }
embassy-sync = { version = "0.6.1",  features = ["defmt"] }
embassy-embedded-hal = { version = "0.2.0" }
embassy-executor = { version = "0.6.3",  features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-net = { version = "0.5.0",  features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6", "dns"] }
embassy-usb = { version = "0.3.0",  features = ["defmt"] }
embassy-futures = { version = "0.1.0"}

defmt = "0.3.10"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0" }
embedded-nal-async = "0.8.0"
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
rand_core = "0.6.3"
critical-section = "1.1"
micromath = "2.0.0"
stm32-fmc = "0.3.0"
embedded-storage = "0.3.1"
static_cell = "2"
chrono = { version = "^0.4", default-features = false }
grounded = "0.2.0"

[[bin]]
name = "blinky"
path = "src/blinky.rs" # Ensure this file exists.
